--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <li><a href="#tech"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Tecnologias</a>
                 </li>
-                <li><a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
+                <li><a href="preco.html"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Preços</a>
                 </li>
                 <li><a href="#contact"
@@ -217,7 +217,7 @@
             <li class="px-4 py-2 hover:bg-[rgba(186,85,211,0.5)]"><a href="#tech">Tecnologias</a></li>
             <li class="px-4 py-2 hover:bg-[rgba(186,85,211,0.5)]"><a href="#contact">Contato</a></li>
             <li class="px-4 py-2 hover:bg-[rgba(186,85,211,0.5)]"><a
-                    href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0">Preços</a>
+                    href="preco.html">Preços</a>
             </li>
         </ul>
     </nav>
