--- a/preco.html
+++ b/preco.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arkersoft T.I</title>
-    <meta name="description" content="Desenvolvimento de sites">
+    <meta name="description" content="Preços de sites, softwares e serviços de tecnologia da informação.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -126,7 +126,8 @@
 
     <nav class="fixed top-0 w-full bg-[#0a0a12] backdrop-blur-lg border-b border-purple-600/10 z-20">
         <div class="max-w-7xl mx-auto px-4 flex items-center justify-between h-16">
-            <a href="https://www.arkersoft.com/index.html" class="text-2xl font-semibold metallic-text flex items-center">
+            <a href="https://www.arkersoft.com/index.html"
+                class="text-2xl font-semibold metallic-text flex items-center">
                 <img src="arkerlg.png" alt="Logo" class="h-auto w-auto max-h-8 max-w-[150px] mr-2">
             </a>
 
@@ -141,7 +142,7 @@
                 <li><a href="#tech"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Tecnologias</a>
                 </li>
-                <li><a href="preco.html"
+                <li><a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Preços</a>
                 </li>
                 <li><a href="#contact"
@@ -163,53 +164,62 @@
         <div class="flex flex-col md:flex-row items-start gap-8">
             <div class="md:w-full">
                 <section class="prose prose-invert max-w-none">
-                    <h2 class="text-2xl font-semibold mb-4">Por Que Ter um Site Profissional?</h2>
+                    <h2 class="text-2xl font-semibold mb-4">Preços podem ser relativos...</h2>
                     <p style="margin-top: 2rem;">
-                        Ter um site bem desenvolvido não é apenas um detalhe, mas um fator essencial para o sucesso de
-                        qualquer negócio.
-                        Um site profissional transmite credibilidade, melhora sua presença online e ajuda a conquistar
-                        mais clientes.
+                        Os preços variam muito conforme a complexidade do projeto, quantidade de usuários e dados, funcionalidades especiais, tempo
+                        de desenvolvimento, entre outros fatores.
                     </p>
 
-                    <h2 class="text-xl font-semibold mt-6 mb-4">Sites de Alta Qualidade Feitos para Você</h2>
+                    <h2 class="text-xl font-semibold mt-6 mb-4">Uma média de preços para os serviços mais requisitados:</h2>
 
                     <p>
-                        <strong>Design Personalizado:</strong> Criamos sites únicos, que combinam com a identidade do
-                        seu negócio e chamam a atenção do seu público.
-                    </p>
-                    <p style="margin-top: 2rem;"></p>
-
-                    <p>
-                        <strong>Experiência do Usuário:</strong> Nossos sites são rápidos, intuitivos e adaptáveis para
-                        qualquer dispositivo, proporcionando uma navegação agradável.
+                        <strong>Desenvolvimento de Sites:</strong> Um site personalizado, com design exclusivo,
+                        otimizado para buscas, alta velocidade de navegação e funcionalidades como formulários de
+                        contato, podem custar a partir de R$ 289,90 + R$ 39,90/mês para hospedagem, manutenção e
+                        garantia de funcionamento 24/7. Sites mais complexos, como e-commerces, podem custar a partir de
+                        R$ 1490,00 + R$ 89,90/mês para até 1000 usuários cadastrados.
                     </p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
-                        <strong>SEO Otimizado:</strong> Aplicamos estratégias para que seu site seja facilmente
-                        encontrado no Google e atraia mais visitantes.
+                        <strong>Softwares MVP:</strong> Soluções automatizadas para problemas específicos, como envio de
+                        mensagens automáticas e integração de sistemas, podem custar a partir de R$ 489,90. Valores
+                        podem aumentar conforme a complexidade da integração.
                     </p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
-                        <strong>Segurança e Estabilidade:</strong> Utilizamos tecnologia de ponta para garantir que seu
-                        site funcione sem falhas e esteja sempre protegido.
+                        <strong>Otimização de Buscas (SEO):</strong> Uma otimização completa de SEO em todas as
+                        plataformas, incluindo Google Business, Maps, plugins SEO, HTML e redes sociais, pode custar a
+                        partir de R$ 389,90. Manutenções periódicas são recomendadas para acompanhar as tendências do
+                        mercado e mudanças nos algoritmos de busca.
+                    </p>
+                    <p style="margin-top: 2rem;"></p>
+
+                    <p>
+                        <strong>Tratamento de Dados:</strong> Análise de dados e criação de relatórios de BI otimizados
+                        com IA podem custar a partir de R$ 789,90 para matrizes bidimensionais com até um milhão de
+                        linhas e 10 colunas. Backups múltiplos custam a partir de R$ 39,90/mês para 100GB de dados,
+                        garantindo segurança com dupla camada de proteção.
                     </p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
                         <strong>Suporte Especializado:</strong> Estamos sempre disponíveis para ajudar com atualizações,
-                        melhorias e qualquer necessidade que surgir.
+                        melhorias e qualquer necessidade que surgir. Clientes que já contrataram algum de nossos
+                        serviços, tem acesso a desconto exclusivos e aviso sobre oportunidades, brindes como lead´s
+                        segmentados, bonús para utilizar em trafégo pago e impulsionar ao máximo sua marca!
                     </p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
-                        Se você quer um site que realmente traga resultados para o seu negócio, entre em contato conosco
-                        e descubra como podemos transformar sua presença online!
+                        Utilizamos tecnologias modernas e ágeis, entregando serviços em prazos expressos com garantia de
+                        funcionamento integral, suporte especializado e resolução de qualquer problema técnologico.
+                        Os valores apresentados são aproximados, pois cada projeto é único e pode ter necessidades diferentes.
                     </p>
                     <p style="margin-top: 2rem;"></p>
                     <a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
-                        target="_blank" class="btn-know-more blur-text">Agende Uma Avaliação Gratuita</a>
+                        target="_blank" class="btn-know-more blur-text">Faça um orçamento gratuito agora!</a>
                 </section>
             </div>
         </div>
