--- a/dados.html
+++ b/dados.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arkersoft T.I</title>
-    <meta name="description" content="Notícia exclusiva sobre Lorem Ipsum.">
+    <meta name="description" content="Controle de dados">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -140,7 +140,7 @@
                 <li><a href="#tech"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Tecnologias</a>
                 </li>
-                <li><a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
+                <li><a href="preco.html"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Preços</a>
                 </li>
                 <li><a href="#contact"
@@ -153,7 +153,7 @@
             <li class="px-4 py-2 hover:bg-[rgba(186,85,211,0.5)]"><a href="#tech">Tecnologias</a></li>
             <li class="px-4 py-2 hover:bg-[rgba(186,85,211,0.5)]"><a href="#contact">Contato</a></li>
             <li class="px-4 py-2 hover:bg-[rgba(186,85,211,0.5)]"><a
-                    href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0">Preços</a>
+                    href="preco.html">Preços</a>
             </li>
         </ul>
     </nav>
