--- a/preco.html
+++ b/preco.html
@@ -166,11 +166,13 @@
                 <section class="prose prose-invert max-w-none">
                     <h2 class="text-2xl font-semibold mb-4">Preços podem ser relativos...</h2>
                     <p style="margin-top: 2rem;">
-                        Os preços variam muito conforme a complexidade do projeto, quantidade de usuários e dados, funcionalidades especiais, tempo
+                        Os preços variam muito conforme a complexidade do projeto, quantidade de usuários e dados,
+                        funcionalidades especiais, tempo
                         de desenvolvimento, entre outros fatores.
                     </p>
 
-                    <h2 class="text-xl font-semibold mt-6 mb-4">Uma média de preços para os serviços mais requisitados:</h2>
+                    <h2 class="text-xl font-semibold mt-6 mb-4">Uma média de preços para os serviços mais requisitados:
+                    </h2>
 
                     <p>
                         <strong>Desenvolvimento de Sites:</strong> Um site personalizado, com design exclusivo,
@@ -179,13 +181,17 @@
                         garantia de funcionamento 24/7. Sites mais complexos, como e-commerces, podem custar a partir de
                         R$ 1490,00 + R$ 89,90/mês para até 1000 usuários cadastrados.
                     </p>
+                    <p><strong>Média de prazo:</strong> 2 dias a até 4 semanas.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
-                        <strong>Softwares MVP:</strong> Soluções automatizadas para problemas específicos, como envio de
-                        mensagens automáticas e integração de sistemas, podem custar a partir de R$ 489,90. Valores
-                        podem aumentar conforme a complexidade da integração.
+                        <strong>Softwares MVP:</strong> MVP (Minimum Viable Product) para automação de tarefas
+                        repetitivas, resolução de problemas específicos, aceleração de processos, geração de relatórios,
+                        ferramentas personalizadas, integração de sistemas com inteligência artificial, chatbots e muito
+                        mais, podem
+                        custar a partir de R$ 489,90. Os valores podem aumentar conforme a complexidade.
                     </p>
+                    <p><strong>Média de prazo:</strong> 5 dias a até 12 semanas.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
@@ -194,6 +200,7 @@
                         partir de R$ 389,90. Manutenções periódicas são recomendadas para acompanhar as tendências do
                         mercado e mudanças nos algoritmos de busca.
                     </p>
+                    <p><strong>Média de prazo:</strong> 2 dias a até 1 semana.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
@@ -202,6 +209,7 @@
                         linhas e 10 colunas. Backups múltiplos custam a partir de R$ 39,90/mês para 100GB de dados,
                         garantindo segurança com dupla camada de proteção.
                     </p>
+                    <p><strong>Média de prazo:</strong> 2 dias a até 2 semanas.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
@@ -210,12 +218,14 @@
                         serviços, tem acesso a desconto exclusivos e aviso sobre oportunidades, brindes como lead´s
                         segmentados, bonús para utilizar em trafégo pago e impulsionar ao máximo sua marca!
                     </p>
+                    <p><strong>Média de prazo:</strong> Sob demanda.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
                         Utilizamos tecnologias modernas e ágeis, entregando serviços em prazos expressos com garantia de
                         funcionamento integral, suporte especializado e resolução de qualquer problema técnologico.
-                        Os valores apresentados são aproximados, pois cada projeto é único e pode ter necessidades diferentes.
+                        Os valores apresentados são aproximados, pois cada projeto é único e pode ter necessidades
+                        diferentes.
                     </p>
                     <p style="margin-top: 2rem;"></p>
                     <a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
