--- a/preco.html
+++ b/preco.html
@@ -215,7 +215,7 @@
                     <p>
                         <strong>Suporte Especializado:</strong> Estamos sempre disponíveis para ajudar com atualizações,
                         melhorias e qualquer necessidade que surgir. Clientes que já contrataram algum de nossos
-                        serviços, tem acesso a desconto exclusivos e aviso sobre oportunidades, brindes como lead´s
+                        serviços, tem acesso a descontos exclusivos e avisos sobre oportunidades, brindes como lead´s
                         segmentados, bonús para utilizar em trafégo pago e impulsionar ao máximo sua marca!
                     </p>
                     <p><strong>Média de prazo:</strong> Sob demanda.</p>
