--- a/preco.html
+++ b/preco.html
@@ -185,8 +185,10 @@
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
-                        <strong>Softwares MVP:</strong> MVP (Minimum Viable Product) para automação de tarefas
-                        repetitivas, resolução de problemas específicos, aceleração de processos, geração de relatórios,
+                        <strong>Softwares MVP:</strong> Produto mínimo viável (Minimum Viable Product) para automação de
+                        tarefas
+                        repetitivas, resolução de problemas específicos, fragmentos de sistemas de gerenciamento
+                        empresarial, aceleração de processos, geração de relatórios,
                         ferramentas personalizadas, integração de sistemas com inteligência artificial, chatbots e muito
                         mais, podem
                         custar a partir de R$ 489,90. Os valores podem aumentar conforme a complexidade.
@@ -210,6 +212,17 @@
                         garantindo segurança com dupla camada de proteção.
                     </p>
                     <p><strong>Média de prazo:</strong> 2 dias a até 2 semanas.</p>
+                    <p style="margin-top: 2rem;"></p>
+
+                    <p>
+                        <strong>Implementação de Sistemas de Gestão:</strong> Soluções completas para controle de
+                        estoque, registro de orçamentos, ordens de serviço, geração de notas fiscais integradas ao
+                        SEFAZ, ERP, SGE, SGV, PDV e etc. Esses sistemas são personalizados para atender às necessidades
+                        específicas de cada
+                        cliente, garantindo funcionalidades avançadas, integração com outros sistemas e suporte
+                        contínuo. Os preços começam a partir de R$ 3990,90, com mensalidades variáveis conforme o uso.
+                    </p>
+                    <p><strong>Média de prazo:</strong> 4 semanas a até 6 meses.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
