--- a/preco.html
+++ b/preco.html
@@ -197,8 +197,8 @@
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
-                        <strong>Otimização de Buscas (SEO):</strong> Uma otimização completa de SEO em todas as
-                        plataformas, incluindo Google Business, Maps, plugins SEO, HTML e redes sociais, pode custar a
+                        <strong>Otimização de Buscas (SEO):</strong> Uma otimização completa para destacar sua presença digital em todas as
+                        plataformas, incluindo Google Business, Maps, plugins SEO, HTML e redes sociais, podendo custar a
                         partir de R$ 389,90. Manutenções periódicas são recomendadas para acompanhar as tendências do
                         mercado e mudanças nos algoritmos de busca.
                     </p>
