--- a/preco.html
+++ b/preco.html
@@ -139,7 +139,7 @@
                 <li><a href="index.html"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Home</a>
                 </li>
-                <li><a href="#tech"
+                <li><a href="index.html#tech"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Tecnologias</a>
                 </li>
                 <li><a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
@@ -175,13 +175,12 @@
                     </h2>
 
                     <p>
-                        <strong>Desenvolvimento de Sites:</strong> Um site personalizado, com design exclusivo,
-                        otimizado para buscas, alta velocidade de navegação e funcionalidades como formulários de
-                        contato, podem custar a partir de R$ 289,90 + R$ 39,90/mês para hospedagem, manutenção e
+                        <strong>Desenvolvimento de Sites:</strong> Um site essêncial personalizado, código puro com design exclusivo,
+                        otimizado para buscas, alta velocidade de navegação, pode custar a partir de R$ 289,90 + R$ 39,90/mês para hospedagem, manutenção e
                         garantia de funcionamento 24/7. Sites mais complexos, como e-commerces, podem custar a partir de
                         R$ 1490,00 + R$ 89,90/mês para até 1000 usuários cadastrados.
                     </p>
-                    <p><strong>Média de prazo:</strong> 2 dias a até 4 semanas.</p>
+                    <p><strong>Média de prazo para produção:</strong> 2 dias a até 4 semanas.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
@@ -193,25 +192,25 @@
                         mais, podem
                         custar a partir de R$ 489,90. Os valores podem aumentar conforme a complexidade.
                     </p>
-                    <p><strong>Média de prazo:</strong> 5 dias a até 12 semanas.</p>
+                    <p><strong>Média de prazo para produção:</strong> 5 dias a até 12 semanas.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
                         <strong>Otimização de Buscas (SEO):</strong> Uma otimização completa para destacar sua presença digital em todas as
-                        plataformas, incluindo Google Business, Maps, plugins SEO, HTML e redes sociais, podendo custar a
+                        plataformas, incluindo Google Business, Maps, plugins SEO, HTML e redes sociais, podem custar a
                         partir de R$ 389,90. Manutenções periódicas são recomendadas para acompanhar as tendências do
                         mercado e mudanças nos algoritmos de busca.
                     </p>
-                    <p><strong>Média de prazo:</strong> 2 dias a até 1 semana.</p>
+                    <p><strong>Média de prazo para implementação:</strong> 2 dias a até 1 semana.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
                         <strong>Tratamento de Dados:</strong> Análise de dados e criação de relatórios de BI otimizados
                         com IA podem custar a partir de R$ 789,90 para matrizes bidimensionais com até um milhão de
-                        linhas e 10 colunas. Backups múltiplos custam a partir de R$ 39,90/mês para 100GB de dados,
+                        linhas e 10 colunas. Backups custam a partir de R$ 39,90/mês para 100GB de dados,
                         garantindo segurança com dupla camada de proteção.
                     </p>
-                    <p><strong>Média de prazo:</strong> 2 dias a até 2 semanas.</p>
+                    <p><strong>Média de prazo para implementação:</strong> 2 dias a até 4 semanas.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
@@ -220,18 +219,18 @@
                         SEFAZ, ERP, SGE, SGV, PDV e etc. Esses sistemas são personalizados para atender às necessidades
                         específicas de cada
                         cliente, garantindo funcionalidades avançadas, integração com outros sistemas e suporte
-                        contínuo. Os preços começam a partir de R$ 3990,90, com mensalidades variáveis conforme o uso.
+                        contínuo. Os preços começam a partir de R$ 3989,90, com mensalidades variáveis conforme o uso.
                     </p>
-                    <p><strong>Média de prazo:</strong> 4 semanas a até 6 meses.</p>
+                    <p><strong>Média de prazo para implementação:</strong> 4 semanas a até 6 meses.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
                         <strong>Suporte Especializado:</strong> Estamos sempre disponíveis para ajudar com atualizações,
                         melhorias e qualquer necessidade que surgir. Clientes que já contrataram algum de nossos
                         serviços, tem acesso a descontos exclusivos e avisos sobre oportunidades, brindes como lead´s
-                        segmentados e bonús para utilizar em trafégo pago e impulsionar ao máximo sua marca!
+                        segmentados e créditos bonús para utilizar em trafégo pago e impulsionar ao máximo sua marca!
                     </p>
-                    <p><strong>Média de prazo:</strong> Sob demanda.</p>
+                    <p><strong>Média de prazo para produção:</strong> Sob demanda.</p>
                     <p style="margin-top: 2rem;"></p>
 
                     <p>
