--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
@@ -234,7 +235,7 @@
                     Experimente o Futuro
                 </h1>
                 <p class="text-xl metallic-text">
-                    Sempre um passo a frente nas tendências tecnológicas do mundo...
+                    Esteja um passo a frente nas inovações tecnológicas
                 </p>
             </div>
         </div>
