--- a/preco.html
+++ b/preco.html
@@ -145,7 +145,7 @@
                 <li><a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Preços</a>
                 </li>
-                <li><a href="#contact"
+                <li><a href="index.html#contact"
                         class="relative px-2 py-1 transition-colors hover:text-[rgba(216,191,216,0.8)]">Contato</a>
                 </li>
             </ul>
