--- a/index.html
+++ b/index.html
@@ -184,10 +184,61 @@
             background: transparent;
             background-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
         }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .loader-container {
+            position: absolute;
+            width: 120px;
+            height: 120px;
+        }
+
+        .ring {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            border: 4px solid transparent;
+            border-top: 4px solid rgba(255, 255, 255, 0.8);
+            animation: spin 1.5s linear infinite;
+        }
+
+        .ring2 {
+            width: 90%;
+            height: 90%;
+            left: 5%;
+            top: 5%;
+            border-top: 4px solid rgba(255, 255, 255, 0.6);
+            animation: spin 1.2s linear infinite reverse;
+        }
+
+        .ring3 {
+            width: 75%;
+            height: 75%;
+            left: 12.5%;
+            top: 12.5%;
+            border-top: 4px solid rgba(255, 255, 255, 0.4);
+            animation: spin 1s linear infinite;
+        }
     </style>
 </head>
 
 <body class="bg-[#0a0a12] text-white overflow-x-hidden font-['Space Grotesk',sans-serif] relative">
+
+    <div id="loading-screen" class="fixed inset-0 bg-black flex items-center justify-center z-50">
+        <div class="relative flex items-center justify-center">
+            <div class="loader-container">
+                <div class="ring"></div>
+                <div class="ring ring2"></div>
+                <div class="ring ring3"></div>
+            </div>
+            <span class="text-gray-300 text-3xl font-bold absolute">
+                <span class="text-purple-900">A</span>rkersoft
+            </span>
+        </div>
+    </div>
 
     <div class="fixed inset-0 light-grid pointer-events-none z-0"></div>
     <nav class="fixed top-0 w-full bg-[#0a0a12] backdrop-blur-lg border-b border-purple-600/10 z-20">
@@ -432,6 +483,15 @@
     });
     
   </script>
+    <script>
+        window.addEventListener('load', function() {
+          setTimeout(function() {
+            const loader = document.getElementById('loading-screen');
+            loader.style.opacity = '0';
+            setTimeout(() => { loader.style.display = 'none'; }, 500);
+          }, 3000);
+        });
+    </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
